2003-11-07 Axel Simon <A.Simon@kent.ukc.ac.uk>

	* mk/recurse.mk: Add a distclean goal that removes the
	localpackage.conf file.

	* gtk/treeView/TreeSelection.chs: Remove a deprecated warning.
	
	* configure.in: Closed a case expression. Simplified and corrected
	the search for XML catalog files.

	* gtk/Makefile, sourceview/Makefile: Make them use the tools in
	tools/callbackGen and tools/hierarchyGen.
	
	* tools/typehier, tools/signals, tools/hierarchyGen,
	tools/callbackGen: Moved this files to a different
	directory. Reason: Everytime I remove the two directories typehier
	and signals from gtk/, CVS removes them from tools.
	
	* tools/typehier/TypeGen.hs: Renamed file to sort out CVS problem.

2003-11-11  Jens Petersen  <petersen@haskell.org>

	* demo/sourceview: New directory for import of sourceview demo
	program by Duncan Coutts <duncan.coutts@worcester.oxford.ac.uk>.

	* demo/sourceview/haskell.lang: New file giving haskell
	highlighting syntax for gtksourceview.

	* demo/sourceview/SourceViewTest.hs: New file to demonstrate
	sourceview.

	* demo/sourceview/Makefile: New file.
	
	* sourceview/SourceTag.chs (sourceTagSetStyle): Fix docu typo.

	* sourceview/Makefile (EXTRA_HFILES): Use relative path.
	(EXTRA_TARFILES): Not needed.
	(EXTRA_CPPFLAGS): Use SOURCEVIEW_CFLAGS instead.
	(EXTRA_LIBS): Use SOURCEVIEW_LIBS instead.

	* mk/recurse.mk (all): Add MAKE_DOCS.
	(inplace): Ditto.
	(noinplace): Ditto.
	(tarsource): Ditto.
	(clean): Ditto.

	* mk/library.mk	(installdirs): Reorder directories.

	* mk/config.mk.in (SOURCEVIEW_LIBS): Define.
	(SOURCEVIEW_CFLAGS): Ditto.

	* mk/common.mk: Fixes so that per package INSTALLDIR works:
	(INSTALLDIROK): Is now a deferred variable.
	(INST_*): Not passed through SEDPIPE for now.

	* gtk2hs.spec.in (%build): Instead of "--with c2hs" rpmbuild
	option, if %c2hs defined then pass it with --with-c2hs= to
	configure.
	(%install): Install sourceview haskell.lang file.  Clean demo
	to prevent binary files in doc dir.
